Chnage of highlight

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
-highlight:
+highlight:rouge
   enable: true
   line_number: true
   auto_detect: false
