--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 ## theme: clean-blog
-theme: clean-blog
+theme: Daily
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
