--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://maninwindow.github.com
-root: /public/
+url: https://maninwindow.github.io
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
