--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: github
+  type: git
   repository: https://github.com/maninwindow/maninwindow.github.com.git
   branch: master
