--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/maninwindow/maninwindow.github.com.git
+  repo: https://github.com/maninwindow/maninwindow.github.com.git
   branch: master
