--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -68,8 +68,8 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
-#scheme: Mist
+#scheme: Muse
+scheme: Mist
 #scheme: Pisces
 
 
