--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://maninwindow.github.io/"
 languageCode = "en-us"
 title = "CCTMC"
 theme = "ananke"
